Add ENVs to example

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DATABASE_PASSWORD=
 ADDRESS_PROVIDER=
 ROLLBAR_ACCESS_TOKEN=
 ROLLBAR_ENV=
+SENDGRID_MAIL=
+SENDGRID_USERNAME=
+SENDGRID_PASSWORD=
+DOMAIN=
