--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: template-rails-7
-    databaseName: template-rails-7
-    user: template-rails-7
+  - name: template
+    databaseName: template
+    user: template
 
 services:
   - type: web
-    name: template-rails-7
+    name: template
     env: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: template-rails-7
+          name: template
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
